// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextButton renders as expected if full width 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--normal lab-btn--teal lab-btn--block"
  onClick={[Function]}
  type="button"
>
  Test Text fullWidth Button
</button>
`;

exports[`TextButton renders as expected when passing a dark skin 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--normal lab-btn--dark"
  onClick={[Function]}
  type="button"
>
  Test Text Dark Button
</button>
`;

exports[`TextButton renders as expected when passing a plus icon 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--normal lab-btn--teal"
  onClick={[Function]}
  type="button"
>
  Test Text Small Button
</button>
`;

exports[`TextButton renders as expected when passing a small size 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--small lab-btn--teal"
  onClick={[Function]}
  type="button"
>
  Test Text Small Button
</button>
`;

exports[`TextButton renders as expected when passing disabled as true 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--normal lab-btn--teal"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Test Text Disabled Button 1
</button>
`;

exports[`TextButton renders as expected when tabIndex is passed 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--normal lab-btn--teal"
  onClick={[Function]}
  tabIndex={1}
  type="button"
>
  Test tabIndex
</button>
`;

exports[`TextButton renders with base props 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--normal lab-btn--teal"
  onClick={[Function]}
  type="button"
>
  Test Text Button
</button>
`;
